--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>File Sharing</title>
         <link href="css/style.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
-    <body>
-        <h1>FILE SHARING :: UNDER CONSTRUCTION</h1>
+    <body class="bg-dark text-light">
+        <div class="container">
+            <div class="d-flex justify-content-center align-items-center">
+                <h1>file sharing from scratch</h1>
+            </div>
+            <div class="row">
+                <form action="http://127.0.0.1:7070/search-html" method="get" class="row">
+                    <button type="submit" class="btn btn-outline-primary m-1">Search For Files</button>
+                </form>
+                <form action="http://127.0.0.1:7070/download-html" method="get" class="row">
+                    <button type="submit" class="btn btn-outline-primary m-1">Download Files</button>
+                </form>
+            </div>
+        </div>
     </body>
 </html>
